Bump font size in editor textareas to prevent pathological zooming on iOS.

--- a/ISS/static-src/src/editor/editor.less
+++ b/ISS/static-src/src/editor/editor.less
@@ -3,5 +3,9 @@
 .editor {
   textarea {
     resize: vertical;
+
+    @media(max-width: @breakpoint) {
+      font-size: 16px;
+    }
   }
 }
